Details
-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0 FF
-
5
-
6d0d2f922bacbcdb5b482d8272c04ec408dfceaf (qt/qtremoteobjects/dev) 6ab53289c3988e73c30b2ab05fdeeeabaa9aa373 (qt/qtremoteobjects/6.2)
-
Qt6_Foundation_Sprint 36
Description
Install Qt6.2.0 gcc binaries (SHA1 0a5e63dce9b7a865a213984d0dfe487922d93290). Launch Creator and open project (cmake) remoteobjects/modelviewclient and compile.
Compilation finishes fine, but when launching, windows opens but disappears quickly, Application Output in Creator says that application has crashed.
Debugger log attached.
Attachments
For Gerrit Dashboard: QTBUG-94513 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
355857,7 | Don't try to access replica's connection when it's not initialized yet | dev | qt/qtremoteobjects | Status: MERGED | +2 | 0 |
357129,2 | Don't try to access replica's connection when it's not initialized yet | 6.2 | qt/qtremoteobjects | Status: MERGED | +2 | 0 |